add done field to task model
